# sub2api

.ai/memories/: go-build-environment-quirks.md
.ai/plans/: codex-tls-proxy-rust.md  fix-codex-tls-proxy-routing-and-logging.md
backend/cmd/server/: wire.go  wire_gen.go
backend/internal/pkg/httpclient/: codex_tls_proxy_transport.go  codex_tls_proxy_transport_test.go
backend/internal/repository/: codex_tls_proxy_client.go  codex_tls_proxy_client_test.go  codex_tls_proxy_privacy_client.go  codex_tls_proxy_privacy_client_test.go  codex_tls_proxy_upstream.go  codex_tls_proxy_upstream_test.go  wire.go
backend/internal/service/: account_usage_service.go  openai_codex_pat_service.go
codex-tls-proxy/: Cargo.toml  Dockerfile  docker-compose.yml
codex-tls-proxy/src/: handler.rs  lib.rs  main.rs  proxy_client.rs
deploy/: .env.example  docker-compose.yml
